tests/parser/break-statement-not-terminated.stderr
error: expected ';'
 --> $DIR/break-statement-not-terminated.lox:1:20
  |
1 | while true { break }
  |                    ^
